Mudanças de @BrasilicioHenrique

--- a/index.html
+++ b/index.html
@@ -1,23 +1,41 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <script src="main.js"></script>
-    
-    <link rel="stylesheet" href="style.css">
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jogo</title>
+    <title>Interactive Game - Metamorfose</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+
     <div id="conteudo">
-        <h1>Opção 1</h1>
+
+        <h6>1</h6>
+        
+        <h2>Essa historia gira em torno do empregado assalariado e as vezes caixeiro viajante ,Gregor Samsa, o qual mora 
+            em uma casa de favores com sua Avo, irmã, Pai e Mãe, ele é o principal provedor da familia, sendo o unico 
+            com um trabalho realmente que os sustenta. Porém... isso tudo mudaria em breve. Era uma noite fria e fora do
+            macio conforto do colção e das paredes de minha casa trovejava muito... mais ou menos as 7 manha o despertador 
+            em cima do criadomudo toca e faz-se vivo, mais um dia normal de trabalho, assim ele pensava... ele se estica 
+            com o intuito de alcançar o despertador e assim Gregor fatidicamente percebe que suas preciosas mãos não são 
+            dele, nem muito menos humanas, ele havia apenas se dado conta... aquilo não eram mãos, eram patas de um inseto. 
+            e com esse choque, ele corretamente olha para baixo e percebe que seu corpo tambem ja não era humano, seu 
+            abdomem se assemelhava a casca dura de uma mera barata de cabeça para baixo... e com essa terrivel aparencia 
+            ele recai sobre agitação, as minusculas e multiplas patas desperadamente tentando alcançar um intangivel chão
+            abaixo delas eu se mexia em vão, as redondas costas de barata que agora o pertenciam fazia com que se debatesse 
+            inutilmente sobre os lençois, eu me pergunto: "oque devo fazer?"
+        </h2>
+
         <div id="buttons">
-            <button onclick="escolha(1)">Escolha 1</button>
-            <button onclick="escolha(2)">Escolha 2</button>
-            <button onclick="escolha(3)">Escolha 3</button>
+            <button onclick="escolha(1)">Devo gritar por ajuda desesperadamente na <br> esperança
+                de que alguem da casa escute</button>
+            <button onclick="escolha(2)">Vou debater ainda mais ate alcançar o despertador <br> com
+                essa estranha pata mal articulada</button>
+            <button onclick="escolha(3)">Isso so pode ser um pesadelo; <br> eu volto a dormir</button>
         </div>
     </div>
     <div id="resultado"></div>
+
+    <script src="main.js"></script>
 </body>
 </html>
