--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
 <body>
 
     <div id="conteudo">
-
-        <h6>1</h6>
-        
         <h2>Essa historia gira em torno do empregado assalariado e as vezes caixeiro viajante ,Gregor Samsa, o qual mora 
             em uma casa de favores com sua Avo, irmã, Pai e Mãe, ele é o principal provedor da familia, sendo o unico 
             com um trabalho realmente que os sustenta. Porém... isso tudo mudaria em breve. Era uma noite fria e fora do
@@ -27,15 +24,16 @@
         </h2>
 
         <div id="buttons">
-            <button onclick="escolha(1)">Devo gritar por ajuda desesperadamente na <br> esperança
+            <button onclick="escolha('inicio_gritar')">Devo gritar por ajuda desesperadamente na <br> esperança
                 de que alguem da casa escute</button>
-            <button onclick="escolha(2)">Vou debater ainda mais ate alcançar o despertador <br> com
+            <button onclick="escolha('inicio_despertador')">Vou debater ainda mais ate alcançar o despertador <br> com
                 essa estranha pata mal articulada</button>
-            <button onclick="escolha(3)">Isso so pode ser um pesadelo; <br> eu volto a dormir</button>
+            <button onclick="escolha('inicio_dormir')">Isso so pode ser um pesadelo; <br> eu volto a dormir</button>
         </div>
     </div>
     <div id="resultado"></div>
 
+    <script src="choices.js"></script><!-- Importa os dados da escolha numa escope global, sendo acessivel no outro arquivo -->
     <script src="main.js"></script>
 </body>
 </html>
