Adicionar aviso de beta ao menu

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             <button class="iniciar" onclick="window.location.href = 'outro_nome_ai.html'">Iniciar</button>
             <button class="creditos" onclick="window.location.href = 'creditos.html'">Créditos</button>
         </div>
-
+        <br>
+        <p style="color: red; font-size: larger; text-align: center;">AVISO: O JOGO ESTÁ EM BETA<br>O jogo ainda está em desenvolvimento, então ainda contém bugs.</p>
     </div>
 </body>
 </html>
