--- a/outro_nome_ai.html
+++ b/outro_nome_ai.html
@@ -9,26 +9,13 @@
 <body>
 
     <div id="conteudo">
-        <p style="font-size: large;">Essa historia gira em torno do empregado assalariado e as vezes caixeiro viajante ,Gregor Samsa, o qual mora 
-            em uma casa de favores com sua Avo, irmã, Pai e Mãe, ele é o principal provedor da familia, sendo o unico 
-            com um trabalho realmente que os sustenta. Porém... isso tudo mudaria em breve. Era uma noite fria e fora do
-            macio conforto do colção e das paredes de minha casa trovejava muito... mais ou menos as 7 manha o despertador 
-            em cima do criadomudo toca e faz-se vivo, mais um dia normal de trabalho, assim ele pensava... ele se estica 
-            com o intuito de alcançar o despertador e assim Gregor fatidicamente percebe que suas preciosas mãos não são 
-            dele, nem muito menos humanas, ele havia apenas se dado conta... aquilo não eram mãos, eram patas de um inseto. 
-            e com esse choque, ele corretamente olha para baixo e percebe que seu corpo tambem ja não era humano, seu 
-            abdomem se assemelhava a casca dura de uma mera barata de cabeça para baixo... e com essa terrivel aparencia 
-            ele recai sobre agitação, as minusculas e multiplas patas desperadamente tentando alcançar um intangivel chão
-            abaixo delas eu se mexia em vão, as redondas costas de barata que agora o pertenciam fazia com que se debatesse 
-            inutilmente sobre os lençois, eu me pergunto: "oque devo fazer?"
+        <p style="font-size: large;">Você se chama Gregor Samsa, um homem que trabalha em um trabalho que odeia, sendo você um caixeiro viajante; viajando a todo momento, até mesmo 
+            quando não deseja. Você trabalha especificamente para pagar a dívida dos seus pais, dando todo o luxo possível para eles. Você ajuda toda sua família e até se sente bem 
+            por isso. Todos da sua família gostam da pessoa que você é. Você mora junto de seus pais e sua irmã chamada Grete. Depois de um longo dia de trabalho, você vai dormir.
         </p>
 
         <div id="buttons">
-            <button onclick="escolha('iniciacao')">Devo gritar por ajuda desesperadamente na <br> esperança
-                de que alguem da casa escute</button>
-            <button onclick="escolha('inicio_despertador')">Vou debater ainda mais ate alcançar o despertador <br> com
-                essa estranha pata mal articulada</button>
-            <button onclick="escolha('inicio_dormir')">Isso so pode ser um pesadelo; <br> eu volto a dormir</button>
+            <button onclick="escolha('inicio')">Ir dormir</button>
         </div>
     </div>
     <div id="resultado"></div>
