--- a/creditos.html
+++ b/creditos.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h4>Alunos de 1INFOv do IFRN - Parnamirim</h4>
-    <p>Brasilicio H.<br>Guilherme A.<br>Kaio H.<br>Shallyson L.</p>
+    <h4 class="creditos">Alunos de 1INFOv do IFRN - Parnamirim</h4>
+    <p class="creditos">Brasilicio H.<br>Guilherme A.<br>Kaio H.<br>Shallyson L.</p>
+
+    <img class="cafe" src="café.jpg" alt="">
+    <p>Você ganhou um café👍</p>
 </body>
 </html>
