--- a/outro_nome_ai.html
+++ b/outro_nome_ai.html
@@ -9,14 +9,19 @@
 <body>
 
     <div id="conteudo">
-        <p style="font-size: large;">Você se chama Gregor Samsa, um homem que trabalha em um trabalho que odeia, sendo você um caixeiro viajante; viajando a todo momento, até mesmo 
-            quando não deseja. Você trabalha especificamente para pagar a dívida dos seus pais, dando todo o luxo possível para eles. Você ajuda toda sua família e até se sente bem 
-            por isso. Todos da sua família gostam da pessoa que você é. Você mora junto de seus pais e sua irmã chamada Grete. Depois de um longo dia de trabalho, você vai dormir.
+        <p style="font-size: large;">Você se chama Gregor Samsa, um homem que trabalha em um trabalho que odeia, sendo 
+            você um caixeiro viajante; viajando a todo momento, até mesmo quando não deseja. Você trabalha especificamente
+            para pagar a dívida dos seus pais, dando todo o luxo possível para eles. Você ajuda toda sua família e até se 
+            sente bem por isso. Todos da sua família gostam da pessoa que você é. Você mora junto de seus pais e sua 
+            irmã chamada Grete. Depois de um longo dia de trabalho, você vai dormir.
         </p>
 
         <div id="buttons">
             <button onclick="escolha('inicio')">Ir dormir</button>
         </div>
+        <p style="font-size: large;">Para jogar o jogo, basta você ler o que se passa na história e clicar no botão para 
+        representar o que fazer. Se divirta👍</p>
+        <img style=" height: auto; width: 300px;" src="img/Gregor N.gif" alt="">
     </div>
     <div id="resultado"></div>
 
