Consertar imagem do café

--- a/creditos.html
+++ b/creditos.html
@@ -10,7 +10,7 @@
     <h4 class="creditos">Alunos de 1INFOv do IFRN - Parnamirim</h4>
     <p class="creditos">Brasilicio H.<br>Guilherme A.<br>Kaio H.<br>Shallyson L.</p>
 
-    <img class="cafe" src="café.jpg" alt="">
-    <p>Você ganhou um café👍</p>
+    <img class="cafe" src="img/café.jpg" alt=""> <br>
+    <p style="clear: left">Você ganhou um café👍</p>
 </body>
 </html>
