--- a/html/creditos.html
+++ b/html/creditos.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Game - Metamorfose</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
     <h4 class="creditos">Alunos de 1INFOv do IFRN - Parnamirim</h4>
     <p class="creditos">Brasilicio H.<br>Guilherme A.<br>Kaio H.<br>Shallyson L.</p>
 
-    <img class="cafe" src="img/café.jpg" alt=""> <br>
+    <img class="cafe" src="../img/café.jpg" alt=""> <br>
     <p style="clear: left">Você ganhou um café👍</p>
 </body>
 </html>
