--- a/html/outro_nome_ai.html
+++ b/html/outro_nome_ai.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Game - Metamorfose</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
 
@@ -21,11 +21,11 @@
         </div>
         <p style="font-size: large;">Para jogar o jogo, basta você ler o que se passa na história e clicar no botão para 
         representar o que fazer. Se divirta👍</p>
-        <img style=" height: auto; width: 300px;" src="img/Gregor N.gif" alt="">
+        <img style=" height: auto; width: 300px;" src="../img/Gregor N.gif" alt="">
     </div>
     <div id="resultado"></div>
 
-    <script src="choices.js"></script><!-- Importa os dados da escolha numa escope global, sendo acessivel no outro arquivo -->
-    <script src="main.js"></script>
+    <script src="../js/choices.js"></script><!-- Importa os dados da escolha numa escope global, sendo acessivel no outro arquivo -->
+    <script src="../js/main.js"></script>
 </body>
 </html>
