mover index.html e consertar links

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <h1>Jogo Interativo - Metamorfose</h1>
 
         <div id="buttons">
-            <button onclick="window.location.href = 'outro_nome_ai.html'">Iniciar</button>
-            <button onclick="window.location.href = 'creditos.html'">Créditos</button>
+            <button onclick="window.location.href = 'html/outro_nome_ai.html'">Iniciar</button>
+            <button onclick="window.location.href = 'html/creditos.html'">Créditos</button>
         </div>
         <br>
         <p style="color: red; font-size: larger; text-align: center;">AVISO: O JOGO ESTÁ EM BETA<br>O jogo ainda está em desenvolvimento, então ainda contém bugs.</p>
