--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Interactive Game - Metamorfose</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body>
+<body class="menu">
     <div id="menu">
-        <h1>Jogo Interativo - Metamorfose</h1>
+        <fieldset style="background-color: black; margin-left: 200px; margin-right: 200px;"><h1>Trabalho de Português - 1INFOv <br> Jogo Interativo - Metamorfose</h1></fieldset>
 
         <div id="buttons">
             <button onclick="window.location.href = 'html/outro_nome_ai.html'">Iniciar</button>
@@ -16,6 +16,7 @@
         </div>
         <br>
         <p style="color: red; font-size: larger; text-align: center;">AVISO: O JOGO ESTÁ EM BETA<br>O jogo ainda está em desenvolvimento, então ainda contém bugs.</p>
+        <img style="float: left; height: auto; width: 200px; margin-bottom: -40px;" src="img/ifrnlogo.png" alt="">
     </div>
 </body>
 </html>
