--- a/html/creditos.html
+++ b/html/creditos.html
@@ -10,7 +10,7 @@
     <h4 class="creditos">Alunos de 1INFOv do IFRN - Parnamirim</h4>
     <p class="creditos">Brasilicio H.<br>Guilherme A.<br>Kaio H.<br>Shallyson L.</p>
 
-    <img class="cafe" src="../img/café.jpg" alt=""> <br>
+    <img style="height: auto; width: 230px; margin-right: 20px; float: left;" src="../img/cafe.jpg" alt=""> <br>
     <p style="clear: left">Você ganhou um café👍</p>
 </body>
 </html>
