mudança da história e menu

--- a/index.html
+++ b/index.html
@@ -8,15 +8,23 @@
 </head>
 <body class="menu">
     <div id="menu">
-        <fieldset style="background-color: black; margin-left: 200px; margin-right: 200px;"><h1>Trabalho de Português - 1INFOv <br> Jogo Interativo - Metamorfose</h1></fieldset>
+        <fieldset style="background-color: rgba(0, 0, 0, 0.384);"><h1>Trabalho de Português - 1INFOv <br> Jogo Interativo - Metamorfose</h1></fieldset>
 
         <div id="buttons">
-            <button onclick="window.location.href = 'html/outro_nome_ai.html'">Iniciar</button>
-            <button onclick="window.location.href = 'html/creditos.html'">Créditos</button>
+            <button style="background-color: rgba(0, 0, 0, 0.384);" onclick="window.location.href = 'html/outro_nome_ai.html'">Iniciar</button>
+            <button style="background-color: rgba(0, 0, 0, 0.384);" onclick="window.location.href = 'html/creditos.html'">Créditos</button>
         </div>
         <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         <p style="color: red; font-size: larger; text-align: center;">AVISO: O JOGO ESTÁ EM BETA<br>O jogo ainda está em desenvolvimento, então ainda contém bugs.</p>
-        <img style="float: left; height: auto; width: 200px; margin-bottom: -40px;" src="img/ifrnlogo.png" alt="">
+        <img style="float: left; height: auto; width: 200px;" src="img/ifrnlogo.png" alt="">
     </div>
 </body>
 </html>
