--- a/index.html
+++ b/index.html
@@ -14,17 +14,19 @@
             <button style="background-color: rgba(0, 0, 0, 0.384);" onclick="window.location.href = 'html/outro_nome_ai.html'">Iniciar</button>
             <button style="background-color: rgba(0, 0, 0, 0.384);" onclick="window.location.href = 'html/creditos.html'">Créditos</button>
         </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
         <p style="color: red; font-size: larger; text-align: center;">AVISO: O JOGO ESTÁ EM BETA<br>O jogo ainda está em desenvolvimento, então ainda contém bugs.</p>
-        <img style="float: left; height: auto; width: 200px;" src="img/ifrnlogo.png" alt="">
+        <br> 
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <img style="position: fixed; bottom: 0; left: 0; margin: 10px; height: auto; width: 200px;" src="img/ifrnlogo.png" alt="">
     </div>
 </body>
 </html>
